frontend/deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: knative-scout
  labels:
    app: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - name: site
          image: docker.io/kscout/site:9de7c962f0d86389d4a84c9d3feae73cf661dca0
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: knative-scout
  labels:
    app: site
spec:
  type: ClusterIP
  selector:
    app: site
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: site-www
  namespace: knative-scout
  labels:
    app: site
spec:
  host: www.kscout.io
  path: /
  to:
    kind: Service
    name: site
    weight: 100
  port:
    targetPort: http
status:
  ingress:
    - host: www.kscout.io
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: site-apex
  namespace: knative-scout
  labels:
    app: site
spec:
  host: kscout.io
  path: /
  to:
    kind: Service
    name: site
    weight: 100
  port:
    targetPort: http
status:
  ingress:
    - host: kscout.io
